--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "tippy.js": "^6.3.7"
     }
 }
